--- a/manifest/wp/clearing/consumer-deployment.yaml
+++ b/manifest/wp/clearing/consumer-deployment.yaml
@@ -16,10 +16,10 @@ spec:
     spec:
       imagePullSecrets:
         - name: regcred
-      imagePullPolicy: Always
       containers:
         - name: clearing-consumer
           image: rhorv/wp-poc:673005e4a6429d33edd19c9f759dddbe444bc288
+          imagePullPolicy: IfNotPresent
           command: ["java", "-jar", "/srv/gs-maven-0.1.0.jar", "clearing"]
           env:
             - name: PG_CLEARING_HOST
