--- a/manifest/wp/pricing/consumer-deployment.yaml
+++ b/manifest/wp/pricing/consumer-deployment.yaml
@@ -16,11 +16,30 @@ spec:
     spec:
       imagePullSecrets:
         - name: regcred
+      initContainers:
+        - name: kafka-topic-setup
+          image: rhorv/kafka-adm:latest
+          command: ["sh", "-c", "/tmp/kafka_2.13-2.8.0/bin/kafka-topics.sh --create --if-not-exists --topic $${EXTERNAL_TOPIC_NAME} --bootstrap-server $${KAFKA_HOST}:$${KAFKA_PORT} && /tmp/kafka_2.13-2.8.0/bin/kafka-topics.sh --create --if-not-exists --topic $${INTERNAL_TOPIC_NAME} --bootstrap-server $${KAFKA_HOST}:$${KAFKA_PORT}"]
+          env:
+            - name: KAFKA_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: kafka-config
+                  key: host
+            - name: KAFKA_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: kafka-config
+                  key: port
+            - name: EXTERNAL_TOPIC_NAME
+              value: "pricing-payment"
+            - name: INTERNAL_TOPIC_NAME
+              value: "pricing-internal"
       containers:
         - name: pricing-consumer
           image: rhorv/wp-poc:89a2b5eb76646cb7f00d51b627340595fef28987
           imagePullPolicy: IfNotPresent
-          command: ["java", "-jar", "/srv/gs-maven-0.1.0.jar", "pricing"]
+          command: ["/bin/sh", "/srv/run_pricing.sh"]
           env:
             - name: KAFKA_HOST
               valueFrom:
