--- a/manifest/wp/pricing/consumer-deployment.yaml
+++ b/manifest/wp/pricing/consumer-deployment.yaml
@@ -18,7 +18,8 @@ spec:
         - name: regcred
       initContainers:
         - name: kafka-topic-setup
-          image: rhorv/kafka-adm:latest
+          image: rhorv/wp-poc-infra:latest
+          imagePullPolicy: IfNotPresent
           command: ["sh", "-c", "/tmp/kafka_2.13-2.8.0/bin/kafka-topics.sh --create --if-not-exists --topic $${EXTERNAL_TOPIC_NAME} --bootstrap-server $${KAFKA_HOST}:$${KAFKA_PORT} && /tmp/kafka_2.13-2.8.0/bin/kafka-topics.sh --create --if-not-exists --topic $${INTERNAL_TOPIC_NAME} --bootstrap-server $${KAFKA_HOST}:$${KAFKA_PORT}"]
           env:
             - name: KAFKA_HOST
@@ -35,6 +36,36 @@ spec:
               value: "pricing-payment"
             - name: INTERNAL_TOPIC_NAME
               value: "pricing-internal"
+        - name: db-migration
+          image: rhorv/wp-poc-infra:latest
+          imagePullPolicy: IfNotPresent
+          command: ["make", "pricing-db-migrate"]
+          env:
+            - name: PG_PRICING_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: pricing-db-config
+                  key: host
+            - name: PG_PRICING_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: pricing-db-config
+                  key: port
+            - name: PG_PRICING_DB
+              valueFrom:
+                configMapKeyRef:
+                  name: pricing-db-config
+                  key: db
+            - name: PG_PRICING_USER
+              valueFrom:
+                secretKeyRef:
+                  name: pricing-db-creds
+                  key: user
+            - name: PG_PRICING_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: pricing-db-creds
+                  key: pass
       containers:
         - name: pricing-consumer
           image: rhorv/wp-poc:c72e5860f8017da9be5adff14c45866cf38983cd
